Bug 182325 - Crash in KDatePicker selectYearClicked()
Summary: Crash in KDatePicker selectYearClicked()
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 189002 189928 202099 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-29 18:10 UTC by Guillermo Belli
Modified: 2009-07-31 16:50 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guillermo Belli 2009-01-29 18:10:42 UTC
Version:            (using KDE 4.2.0)
Installed from:    Ubuntu Packages

Using Kubuntu 8.10 AMD64, kernel 2.6.28.2 and KDE 4.2.0.

I was adjusting the date in systemsettings, I recieved an error that the date could not be changed, I closed the programs and it crashed. Here's the backtrace:

Application: System Settings (systemsettings), signal SIGSEGV
0x00007f072e571621 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 5443)]

Thread 3 (Thread 0x4139a950 (LWP 5494)):
#0  0x00007f072e5a8482 in select () from /lib/libc.so.6
#1  0x00007f072fec1006 in ?? () from /usr/lib/libQtCore.so.4
#2  0x00007f072fdf8362 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f072c1b33ea in start_thread () from /lib/libpthread.so.0
#4  0x00007f072e5afc6d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x42b9d950 (LWP 5513)):
#0  0x00007f072c1b72d9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f072fdf9349 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007f071ad43bd7 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2ac9140, th=0x2a54560) at /build/buildd/kde4libs-4.2.0/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f071ad46f28 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2a50ea0, th=0x2a54560) at /build/buildd/kde4libs-4.2.0/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f071ad45504 in ThreadWeaver::ThreadRunHelper::run (this=0x42b9d0c0, parent=0x2ac9140, th=0x2a54560) at /build/buildd/kde4libs-4.2.0/threadweaver/Weaver/Thread.cpp:87
#5  0x00007f071ad455de in ThreadWeaver::Thread::run (this=0x2a54560) at /build/buildd/kde4libs-4.2.0/threadweaver/Weaver/Thread.cpp:142
#6  0x00007f072fdf8362 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f072c1b33ea in start_thread () from /lib/libpthread.so.0
#8  0x00007f072e5afc6d in clone () from /lib/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f0731d026f0 (LWP 5443)):
[KCrash Handler]
#5  0x0000000002a4f3b0 in ?? ()
#6  0x00007f0730b6f50d in KPopupFrame::exec (this=0x2c713c0, pos=<value optimized out>) at /usr/include/qt4/QtGui/qwidget.h:468
#7  0x00007f0730b6c8ac in KDatePicker::selectYearClicked (this=0x2bad9a0) at /build/buildd/kde4libs-4.2.0/kdeui/widgets/kdatepicker.cpp:557
#8  0x00007f0730b6dfd8 in KDatePicker::qt_metacall (this=0x2bad9a0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff39d36b20)
    at /build/buildd/kde4libs-4.2.0/obj-x86_64-linux-gnu/kdeui/kdatepicker.moc:107
#9  0x00007f072fef5134 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0x00007f072f736712 in QAbstractButton::toggled () from /usr/lib/libQtGui.so.4
#11 0x00007f072f4bc796 in QAbstractButton::setChecked () from /usr/lib/libQtGui.so.4
#12 0x00007f072f4bc45a in ?? () from /usr/lib/libQtGui.so.4
#13 0x00007f072f4bc6f5 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#14 0x00007f072f583f8a in QToolButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#15 0x00007f072f202329 in QWidget::event () from /usr/lib/libQtGui.so.4
#16 0x00007f072f1afc3d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#17 0x00007f072f1b822a in QApplication::notify () from /usr/lib/libQtGui.so.4
#18 0x00007f0730abc3eb in KApplication::notify (this=0x7fff39d38130, receiver=0x2b99910, event=0x7fff39d37300) at /build/buildd/kde4libs-4.2.0/kdeui/kernel/kapplication.cpp:307
#19 0x00007f072fee0d61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#20 0x00007f072f1b75c8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#21 0x00007f072f21bbe9 in ?? () from /usr/lib/libQtGui.so.4
#22 0x00007f072f21a607 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#23 0x00007f072f2422c4 in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007f072b0d7d3b in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#25 0x00007f072b0db50d in ?? () from /usr/lib/libglib-2.0.so.0
#26 0x00007f072b0db6cb in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#27 0x00007f072ff0915f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#28 0x00007f072f241a6f in ?? () from /usr/lib/libQtGui.so.4
#29 0x00007f072fedf682 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#30 0x00007f072fedf80d in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#31 0x00007f072fee1cbd in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#32 0x0000000000411c76 in main (argc=5, argv=0x7fff39d38568) at /build/buildd/kdebase-workspace-4.2.0/systemsettings/main.cpp:67
Comment 1 Christoph Feck 2009-04-09 22:26:21 UTC
*** Bug 189002 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-04-10 03:27:16 UTC
*** Bug 189217 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2009-04-12 16:56:24 UTC
SVN commit 952794 by cfeck:

Fix crash in KDatePicker selectYearClicked()

Revert r834444. Use an event handler to catch outside clicks
instead.

Reviewed by aacid

BUG: 182325


 M  +1 -12     kdatepicker.cpp  
 M  +0 -1      kdatepicker.h  
 M  +54 -6     kdatetable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952794
Comment 4 Christoph Feck 2009-04-12 17:12:52 UTC
SVN commit 952798 by cfeck:

Fix crash in KDatePicker selectYearClicked() (backport r952794)

CCBUG: 182325


 M  +1 -12     kdatepicker.cpp  
 M  +0 -1      kdatepicker.h  
 M  +54 -6     kdatetable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952798
Comment 5 Dario Andres 2009-04-18 13:15:24 UTC
*** Bug 189928 has been marked as a duplicate of this bug. ***
Comment 6 Simon Edwards 2009-04-19 20:12:41 UTC
SVN commit 956274 by sedwards:

Restore binary compatibility after commit 952798 . Protected Q_SLOT uncheckYearSelector() should not be removed.

CCBUG: 182325
CCMAIL: christoph@maxiom.de



 M  +7 -0      kdatepicker.cpp  
 M  +1 -0      kdatepicker.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=956274
Comment 7 Simon Edwards 2009-04-19 20:13:54 UTC
SVN commit 956275 by sedwards:

Restore binary compatibility after commit 952794 . Protected Q_SLOT uncheckYearSelector() should not be removed.

CCBUG: 182325
CCMAIL: christoph@maxiom.de



 M  +6 -0      kdatepicker.cpp  
 M  +1 -0      kdatepicker.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=956275
Comment 8 Dario Andres 2009-06-27 03:34:24 UTC
*** Bug 198010 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2009-06-27 03:35:36 UTC
Bug 198010 is reported for KDE4.2.4 (but the fix included here should have been applied to 4.2.4 already); could it be a different issue? Thanks
Comment 10 Dario Andres 2009-07-31 16:50:38 UTC
*** Bug 202099 has been marked as a duplicate of this bug. ***