Fix crash in KDatePicker selectYearClicked()

Revert r834444. Use an event handler to catch outside clicks
instead.

Reviewed by aacid

BUG: 182325

svn path=/trunk/KDE/kdelibs/; revision=952794