kdeui/widgets/kdatepicker.h
@@ -171,7 +171,6 @@ protected Q_SLOTS:
     void yearBackwardClicked();
     void selectMonthClicked();
     void selectYearClicked();
-    void uncheckYearSelector();
     void lineEnterPressed();
     void todayButtonClicked();
     void weekSelected( int );
